# chess-engine

./: .gitignore  Cargo.toml  chess-engine.test  cpuproile.out  go.mod  main_test.go
boards/2026-03-04_22-49-20/: 2026-03-04_22-49-22.json  2026-03-04_22-49-23
cmd/evaluate/: main.go
cmd/main/: main.go
heap_visualizer/: go.mod  wes.html
heap_visualizer/src/: main.go
internal/: board.go  evaluation.go  initialBoard.go  list.go  piece.go  queue.go
internal/man/: main.go  queue.go
pprof/: cpu.pprof
src/: core.rs  main.rs  testbed.rs
src/core/: app.rs  bitwise_operations.rs  board.rs  board_state.rs  chess.rs  draw.rs  engine.rs  initial_board.rs  log.rs  macros.rs  map.rs  piece.rs  queue.rs  reevaluation_queue.rs  set.rs  structs.rs  tree.rs  weighted_queue.rs
src/core/chess/: bitwise_operations.rs  board.rs  board_state.rs  initial_board.rs  piece.rs
src/core/engine/: evaluation_engine.rs  prune_engine.rs  reevaluation_engine.rs  structs.rs
src/core/mem/: alloc.rs
src/core/structs/: cash.rs  concurrent_array_builder.rs  copy_array_builder.rs  eval_queue.rs  lock.rs  lru.rs  map.rs  queue.rs  reevaluation_queue.rs  set.rs  threaded_queue.rs  weighted_queue.rs
src/core/structs/eval_queue/: distributed_eval_queue.rs  eval_queue.rs
