[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.2"
thousands = "0.2.0"
tui-input = "*"
chrono = "*"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true
panic = 'abort'

[profile.dev]
panic = 'abort'
